# st-demo-medical

./: CMakeLists.txt  CONTRIBUTING.md  README.md  medical.pro  qml.qrc  videos.qrc
assets/: readme.txt
assets/Video/: scale.sh
qml/: Aed.qml  Background.qml  BlowAir.qml  BottomMenu.qml  Constants.qml  CustomButton.qml  Final.qml  HeartRate.qml  Help.qml  LoadingPage.qml  Main.qml  ManEffects.qml  SecureAirways.qml  Startup.qml  TopMenu.qml  VideoMenu.qml
src/: main.cpp
